welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: not found: value BaisseBrosse
  BaisseBrosse()
  ^FlowerPot:10: error: not found: value BaisseBrosse
  BaisseBrosse()
  ^FlowerPot:13: error: not found: value BaisseBrosse
  BaisseBrosse()
  ^