welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  setCouleurBrosse(Color.RED)
  leveBrosse()
  baisseBrosse()
  avance()
  leveBrosse()
  BaisseBrosse()
  avance()
  leveBrosse()
  BaisseBrosse()
  avance()
  leveBrosse()
  BaisseBrosse()
}
